tests/samples/negative/modules/ambiguous_import_alias.ax
module ambiguous_import_alias;

import samplelib.visibility as lib;
import samplelib.reexport_inner as lib;

fn main() -> i32 {
    return lib::answer;
}
